# copostr

./: .gitignore  Cargo.toml  LICENCE  README.md
flickr-indexer/: README.md  config.example.json  flickr-indexer.py
src/: cli.rs  main.rs  types.rs
